Remove sentinel null valued rules independent of any conditions